# autostat-agent

./: .gitignore  .pre-commit-config.yaml  README.md  example_data.csv  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routers/: analyze.py  datasets.py
app/datasets/: profile.py
cli/: plan.py  profile.py  run.py
core/: agent.py  registry.py  state.py
datasets/: profile.py  storage.py
executor/: registry.py  runner.py  schemas.py  utils.py
executor/tools/: eda.py  plotting.py  stats.py
planner/: llm_planner.py  logging.py  parsing.py  processing.py  prompting.py  schemas.py  utils.py
planner/prompts/: system.prompt
spec/: tool_specs.py
summarizer/: manager.py  narrative.py  render.py
tests/: conftest.py  test_executor.py  test_planner.py  test_summarizer.py  test_upload.py
