[tool.poetry]
name = "autostat-agent"
version = "0.1.0"
description = "Self-serve stats agent"
authors = ["Koby Raz <yakvrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = ">=2.11.7,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
pandas = ">=2.3.0,<3.0.0"
duckdb = ">=1.3.1,<2.0.0"
setuptools = ">=80.9.0,<81.0.0"
httpx = ">=0.28.1,<0.29.0"
scipy = "^1.16.0"
matplotlib = "^3.10.3"
requests = "^2.32.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"